# disrust

./: Cargo.toml  shell.nix
src/: main.rs
src/api/: data.rs  gateway_thread.rs  wrapper.rs
src/ui/: channels.rs  chat_box.rs  gui.rs  mod.rs  stateful_list.rs
